start adding logic for corners on opposite side and more clipping fixes

--- a/style.css
+++ b/style.css
@@ -1,17 +1,18 @@
 .sticker {
-  
 }
 
 .myClass {
-  /* border-radius: 50%; */
-  width: 200px;
+  box-sizing: border-box;
+  border: 10px solid white;
+  border-radius: 50%;
+  width: 400px;
   height: 400px;
   background-image: url('./img.jpg');
   /* transition: all 0.2s ease; */
 }
 
 .stickerFlip {
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 
 .stickerFlip::after {
@@ -22,4 +23,8 @@
   height: 100%;
   background-color: rgba(255, 255, 255, 0.7);
   z-index: 2;
+}
+
+body {
+  background-color: whitesmoke;
 }
